Refactor index.html with navigation links
Updated navigation links in the left bar and fixed HTML structure.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
 <div class="left-bar">
-  <p>Hlavní stránka</p>
-  <p>Fotky</p>
+  <p><a href="index.html" class="left-link">Hlavní stránka</a></p>
+  <p><a href="fotky.html" class="left-link">Fotky</a></p>
 </div>
 
 <div class="center-square">
@@ -57,4 +57,5 @@ Knock, knock, knockin' on heaven's door
 
 </body>
 </html>
+
 
