Revise fotky.html content and structure
Updated the title and paragraph content in fotky.html.

--- a/fotky.html
+++ b/fotky.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
- <meta charset="UTF-8">
- <title> Fotky z internetu</title>
- <link rel="stylesheet" href="style.css"
+  <meta charset="UTF-8">
+  <title>Moje fotky</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>Moje fotky</h1>
- <p> Zde jsou asi fotky.</p>
+  <h1>Moje fotky</h1>
+  <p>Zde budou tvoje fotky.</p>
 </body>
 </html>
