--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="bg"></div>
 
 <a href="fotky.html">
- <img src="mojestrankabg.jpg" alt="Moje fotky"  style"width:100px; border-radius:5px;">
+ <img src="mojestrankabg.jpg" alt="Moje fotky"  style="width:100px; border-radius:5px;">
 </a>
 
 
@@ -57,5 +57,6 @@ Knock, knock, knockin' on heaven's door
 
 </body>
 </html>
+
 
 
