--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<title>Rocker dream</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-
-
 <body>
 
 	<div class="bg"></div>
@@ -47,13 +45,15 @@ Knock, knock, knockin' on heaven's door
 Knock, knock, knockin' on heaven's door 
 </div>
 
- <button>Klikni na mě</button>
+ <button<p><a href="fotky.html" class="left-link">Fotky</a></p></button>
+ 
 
 
  
 
 </body>
 </html>
+
 
 
 
