--- a/fotky.html
+++ b/fotky.html
@@ -6,7 +6,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <h1>Moje fotky</h1>
-  <p>Zde budou tvoje fotky.</p>
+
+  <div class="gallery">
+    <img src="foto1.jpg" alt="Fotka 1">
+    <img src="foto2.jpg" alt="Fotka 2">
+    <img src="foto3.jpg" alt="Fotka 3">
+  </div>
+
 </body>
 </html>
